changed the email address of shamim

--- a/assets/ignoreit/department.html
+++ b/assets/ignoreit/department.html
@@ -13,12 +13,12 @@ p{font-size:15px}
   border-radius: 3px;
   color: #ffffff;
   font-size: 16px;
-  padding: 7px 10px 7px 10px;
+  padding: 9px 10px 9px 10px;
   text-decoration: none;
   text-align: center;
 }
 
-.maintitle{font-weight:bold;width:100%; font-size: 16px; background:#039be5; color:#FFFFFF; border-radius: 10px;padding-top:10px; padding-bottom:10px; text-align: center; margin-bottom:3px}
+.maintitle{font-weight:bold;width:100%; font-size: 17px; background:#039be5; color:#FFFFFF; border-radius: 10px;padding-top:10px; padding-bottom:10px; text-align: center; margin-bottom:3px}
 .telephone {
     background-image: url("http://i61.tinypic.com/n6xtmw.png");
     background-position: 0 0px;
@@ -450,7 +450,7 @@ Phone: <a class="telephone" href="tel:01726036487">01726036487</a></div>
 </div>
 
 <div class="demo-frame">
-<a style="text-decoration:none" href="#"><div id="expander6" class="headertitle expander">Applied Mathematics(AM 06)</div></a>
+<a style="text-decoration:none" href="#"><div id="expander6" class="headertitle expander">Applied Mathematics(A. MTH 06)</div></a>
 
 <div class="content">
 <p style="text-align: center;"><u><strong>Chairman</strong></u></p>
