--- a/assets/ignoreit/emergency.html
+++ b/assets/ignoreit/emergency.html
@@ -13,12 +13,12 @@ p{font-size:15px}
   border-radius: 3px;
   color: #ffffff;
   font-size: 16px;
-  padding: 7px 10px 7px 10px;
+  padding: 9px 10px 9px 10px;
   text-decoration: none;
   text-align: center;
 }
 
-.maintitle{font-weight:bold;width:100%; font-size: 16px; background:#039be5; color:#FFFFFF; border-radius: 10px;padding-top:10px; padding-bottom:10px; text-align: center; margin-bottom:3px}
+.maintitle{font-weight:bold;width:100%; font-size: 17px; background:#039be5; color:#FFFFFF; border-radius: 10px;padding-top:10px; padding-bottom:10px; text-align: center; margin-bottom:3px}
 .telephone {
     background-image: url("http://i61.tinypic.com/n6xtmw.png");
     background-position: 0 0px;
@@ -280,7 +280,7 @@ Phone: <a class="telephone" href="tel:01981002934">01981002934</a></div>
 <strong>Maijdi Court</strong>: <a class="telephone" href="tel:62190">62190</a></div>
 
 </div></div><div class="demo-frame">
-<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">Mail/Express Trains From Noakhali :</div></a>
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">Mail/Express Trains From Noakhali</div></a>
 <div class="content">
 
 <div class="infoclass"><strong>Train No:</strong> 711<br />
@@ -330,3 +330,5 @@ Phone: <a class="telephone" href="tel:01981002934">01981002934</a></div>
 So you have to write =&gt;<br />
 <strong>Tr 711</strong><br />
 send this to 16318. Only Banglalink and Grammenphone subscriber can get this feature. You will only get the notification of Express Train.</div>
+</div></div>
+
