--- a/assets/ignoreit/registeroffice.html
+++ b/assets/ignoreit/registeroffice.html
@@ -13,12 +13,12 @@ p{font-size:15px}
   border-radius: 3px;
   color: #ffffff;
   font-size: 16px;
-  padding: 7px 10px 7px 10px;
+  padding: 9px 10px 9px 10px;
   text-decoration: none;
   text-align: center;
 }
 
-.maintitle{font-weight:bold;width:100%; font-size: 16px; background:#039be5; color:#FFFFFF; border-radius: 10px;padding-top:10px; padding-bottom:10px; text-align: center; margin-bottom:3px}
+.maintitle{font-weight:bold;width:100%; font-size: 17px; background:#039be5; color:#FFFFFF; border-radius: 10px;padding-top:10px; padding-bottom:10px; text-align: center; margin-bottom:3px}
 .telephone {
     background-image: url("http://i61.tinypic.com/n6xtmw.png");
     background-position: 0 0px;
@@ -178,7 +178,7 @@ E-mail:<a class="email" href="mailto:rousseau777@yahoo.com">rousseau777@yahoo.co
 </div>
 
 <div class="demo-frame">
-<a style="text-decoration:none" href="#"><div id="expander7" class="headertitle expander">Public Relation Branch And Guest house on Dhaka:</div></a>
+<a style="text-decoration:none" href="#"><div id="expander7" class="headertitle expander">Public Relation Branch And Guest house on Dhaka</div></a>
 <div class="content">
 <div class="infoclass">Assistant Register:<br />
 <strong>Mr. mohammad Tamzid Hossain Chowdhury</strong><br />
@@ -205,7 +205,7 @@ E-mail:<a class="email" href="mailto:bhuiyannstu@yahoo.com">bhuiyannstu@yahoo.co
 </div>
 
 <div class="demo-frame">
-<a style="text-decoration:none" href="#"><div id="expander9" class="headertitle expander">Networking and IT Branch:</div></a>
+<a style="text-decoration:none" href="#"><div id="expander9" class="headertitle expander">Networking and IT Branch</div></a>
 <div class="content">
 <div class="infoclass">System annalist:<br />
 <strong>Engineer Md. Abdullah Hil Faruk</strong>(study leave)<br />
@@ -217,46 +217,6 @@ E-mail:<a class="email" href="mailto:mahfaruk@yahoo.com">mahfaruk@yahoo.com</a><
 <strong>Mr. Md. Moyeenuddin</strong><br />
 Mobile:<a class="telephone" href="tel:01720847993">01720847993</a><br />
 E-mail:<a class="email" href="mailto:moyeen.cste@gmail.com">moyeen.cste@gmail.com</a></div>
-</div>
-</div>
-
-<div class="demo-frame">
-<a style="text-decoration:none" href="#"><div id="expander10" class="headertitle expander">Safety Branch</div></a>
-<div class="content">
-<div class="infoclass">Section officer<br />
-<strong>Mr. Mohammad Abdul Kader</strong><br />
-Mobile:<a class="telephone" href="tel:01711021478">01711021478</a><br />
-E-mail:<a class="email" href="mailto:rahman.nstu@yahoo.com">rahman.nstu@yahoo.com</a></div>
-</div>
-</div>
-
-<div class="demo-frame">
-<a style="text-decoration:none" href="#"><div id="expander11" class="headertitle expander">Ansar Forces &nbsp;</div></a>
-<div class="content">
-<div class="infoclass">PC,Ansar<br />
-Mobile:<a class="telephone" href="tel:01727516565">01727516565</a></div>
-</div>
-</div>
-
-<div class="demo-frame">
-<a style="text-decoration:none" href="#"><div id="expander12" class="headertitle expander">Central store</div></a>
-<div class="content">
-<div class="infoclass">Store officer<br />
-<strong>Mr. Mohammad Abdullah Al Faruk</strong><br />
-Mobile:<a class="telephone" href="tel:01716341228">01716341228</a><br />
-Email: <a class="email" href="mailto:sumonhinsa@yahoo.com">sumonhinsa@yahoo.com</a></div>
-
-<div class="infoclass"><strong>Mr Mohammad Monir Hossain</strong><br />
-Mobile:<a class="telephone" href="tel:01734008350">01734008350</a><br />
-Email:<a class="email" href="mailto:nstu.monir77@yahoo.com">nstu.monir77@yahoo.com</a></div>
-</div>
-</div>
-
-<div class="demo-frame">
-<a style="text-decoration:none" href="#"><div id="expander13" class="headertitle expander">Central Mosque</div></a>
-<div class="content">
-<div class="infoclass">Imam:<strong>Hafez Mao. Md. Giyas Uddin Bhuiyan</strong><br />
-Mobile:<a class="telephone" href="tel:01814174228">01814174228</a></div>
 </div>
 </div>
 
@@ -286,7 +246,7 @@ Email:<a class="email" href="mailto:nstu_library@yahoo.com">nstu_library@yahoo.c
 
 <div class="infoclass">Documentation Officer<br />
 <strong>Md.&nbsp; Babor Ali</strong><br />
-Phone: <a class="telephone" href="tel:01722936805">01722-936805</a><br /><br />
+Phone: <a class="telephone" href="tel:01722936805">01722-936805</a><br />
 Email: <a class="email" href="mailto:baborali.ru@gmail.com">baborali.ru@gmail.com</a></div>
 </div>
 </div>
@@ -332,6 +292,47 @@ Senior Lawyer<br />
 Phone: <a class="telephone" href="tel:01712211724">01712211724</a></div>
 </div>
 </div>
+
+<div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander10" class="headertitle expander">Safety Branch</div></a>
+<div class="content">
+<div class="infoclass">Section officer<br />
+<strong>Mr. Mohammad Abdul Kader</strong><br />
+Mobile:<a class="telephone" href="tel:01711021478">01711021478</a><br />
+E-mail:<a class="email" href="mailto:rahman.nstu@yahoo.com">rahman.nstu@yahoo.com</a></div>
+</div>
+</div>
+
+<div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander11" class="headertitle expander">Ansar Forces &nbsp;</div></a>
+<div class="content">
+<div class="infoclass">PC,Ansar<br />
+Mobile:<a class="telephone" href="tel:01727516565">01727516565</a></div>
+</div>
+</div>
+
+<div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander12" class="headertitle expander">Central store</div></a>
+<div class="content">
+<div class="infoclass">Store officer<br />
+<strong>Mr. Mohammad Abdullah Al Faruk</strong><br />
+Mobile:<a class="telephone" href="tel:01716341228">01716341228</a><br />
+Email: <a class="email" href="mailto:sumonhinsa@yahoo.com">sumonhinsa@yahoo.com</a></div>
+
+<div class="infoclass"><strong>Mr Mohammad Monir Hossain</strong><br />
+Mobile:<a class="telephone" href="tel:01734008350">01734008350</a><br />
+Email:<a class="email" href="mailto:nstu.monir77@yahoo.com">nstu.monir77@yahoo.com</a></div>
+</div>
+</div>
+
+<div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander13" class="headertitle expander">Central Mosque</div></a>
+<div class="content">
+<div class="infoclass">Imam:<strong>Hafez Mao. Md. Giyas Uddin Bhuiyan</strong><br />
+Mobile:<a class="telephone" href="tel:01814174228">01814174228</a></div>
+</div>
+</div>
+
 
 <div class="demo-frame">
 <a style="text-decoration:none" href="#"><div id="expander19" class="headertitle expander">Bank</div></a>
