--- a/assets/ignoreit/student_activities.html
+++ b/assets/ignoreit/student_activities.html
@@ -12,13 +12,13 @@ p{font-size:15px}
   background-image: linear-gradient(to bottom, #03a9f4, #039be5);
   border-radius: 3px;
   color: #ffffff;
-  font-size: 15px;
-  padding: 7px 10px 7px 10px;
+  font-size: 16px;
+  padding: 9px 10px 9px 10px;
   text-decoration: none;
   text-align: center;
 }
 
-.maintitle{font-weight:bold;width:100%; font-size: 16px; background:#039be5; color:#FFFFFF; border-radius: 10px;padding-top:10px; padding-bottom:10px; text-align: center; margin-bottom:3px}
+.maintitle{font-weight:bold;width:100%; font-size: 17px; background:#039be5; color:#FFFFFF; border-radius: 10px;padding-top:10px; padding-bottom:10px; text-align: center; margin-bottom:3px}
 .telephone {
     background-image: url("http://i61.tinypic.com/n6xtmw.png");
     background-position: 0 0px;
@@ -63,7 +63,9 @@ margin-left: 20px;
 margin-left: 40px;
 }
 </style>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script><script type="text/javascript" src="https://raw.githubusercontent.com/sylvain-hamel/simple-expand/master/src/simple-expand.min.js"></script><script type="text/javascript">
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/sylvain-hamel/simple-expand/master/src/simple-expand.min.js"></script>
+<script type="text/javascript">
 $(function () {
 $('.expander').simpleexpand();
 });
@@ -76,7 +78,7 @@ The university has strong cricket, football, volleyball and badminton teams. Int
 To arrange these event there are some organization. Details here -</p>
 
 <div class="demo-frame">
-<div class="headertitle expander" id="expander1"><a href="#" style="text-decoration:none">NSTU Open Source Network (NSTU OSN)</a></div>
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">NSTU Open Source Network (NSTU OSN)</div></a>
 
 <div class="content">
 <div class="infoclass">Open source network activities:<br />
@@ -87,11 +89,9 @@ Open Source Network started their journey in Noakhali Science and Technology Uni
 &nbsp;&nbsp;&nbsp; * Workshop on Red Hat Linux Administration This local OSN does some jobs related to IT application such as software, website development and so on</div>
 
 <div class="infoclass"><strong>Details:</strong> <a href="http://www.bdosn.org">www.bdosn.org</a></div>
-</div>
-</div>
 
-<div class="demo-frame">
-<div class="headertitle expander" id="expander2"><a href="#" style="text-decoration:none">Programming Club</a></div>
+</div></div><div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander2" class="headertitle expander">Programming Club</div></a>
 
 <div class="content">
 <div class="infoclass">Based in the School of Computer Science and IT, CSTE Programming Club provides a stimulating, cooperative environment where students can interact and learn from each other by solving various programming problems. Each year we try to enter teams into regional programming competitions as part of the Association for Computing Machinery International Collegiate Programming Contest (ACM-ICPC). &nbsp;&nbsp;&nbsp; * Gain and develop good programming skills and general problem solving skills<br />
@@ -102,11 +102,9 @@ Open Source Network started their journey in Noakhali Science and Technology Uni
 &nbsp;&nbsp;&nbsp; * Have fun with other fellow students!</div>
 
 <div class="infoclass"><strong>Facebook Group:</strong> <a href="https://www.facebook.com/profile.php?id=297499666939182">https://www.facebook.com/profile.php?id=297499666939182</a></div>
-</div>
-</div>
 
-<div class="demo-frame">
-<div class="headertitle expander" id="expander3"><a href="#" style="text-decoration:none">MOSHAL</a></div>
+</div></div><div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander3" class="headertitle expander">MOSHAL</div></a>
 
 <div class="content">
 <div class="infoclass">Moshal is an literary and cultural organization of Noakhali Science and Technology University. It has lightened a campus based cultural movement. It works for arousing latent literary and cultural talents in the NSTU family. It is also trying to spread the view of a good culture among the people. Our purpose is to cherish Bangalee culture and tradition in our heart and flourish them in our works. It works for creating a wonderful cultural atmosphere in the university campus.<br />
@@ -120,13 +118,12 @@ Open Source Network started their journey in Noakhali Science and Technology Uni
 <strong>Our Facebook Group:</strong> <a href="http://www.facebook.com/groups/1590274951201417">www.facebook.com/groups/1590274951201417</a></div>
 
 <div class="infoclass"><strong>Contact Person:</strong> Kamrul Huda, <a class="telephone" href="tel:01913147411">01913147411</a></div>
-</div>
-</div>
 
-<div class="demo-frame">
-<div class="headertitle expander" id="expander4"><a href="#" style="text-decoration:none">Science Mania</a></div>
+</div></div><div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander4" class="headertitle expander">Science Mania</div></a>
 
 <div class="content">
+
 <div class="infoclass">Science Mania Let science thoughts be easy and interesting Science Mania is a science thoughts platform of Noakhali Science and Technology University. The science maniac people of this organization are working on spreading ongoing world, what is going in the science arena, heartthrob science verses technology news, gorgeous approaches of technology and of course easier and modern science. In these days, science and technology is the first and foremast weapon to go ahead. It is a matter of great sorrow that, usually in our country science is described as a hazy and ambiguous thing from the very beginning of our childhood. So our children and young students cherished a fear for science in their heart. But in real view, science is not so. We, science mania believe that science can be interesting and easy. Simple, easy and friendly explanation of science can fight with this fear and make our people interested on science thinking. Beautiful implementation of science and technology in every sector of society can move the world to a new dimension. If you want to know science and spread the science among the people, you are cordially welcome to the family of science mania.<br />
 <br />
 <strong>Works:</strong><br />
@@ -138,41 +135,40 @@ Open Source Network started their journey in Noakhali Science and Technology Uni
 <strong>Our Facebook Group:</strong> <a href="http://www.facebook.com/groups/382136268609853">www.facebook.com/groups/382136268609853</a></div>
 
 <div class="infoclass"><strong>Contact Person:</strong> Rabiul Awal, <a class="telephone" href="tel:01827893381">01827893381</a></div>
-</div>
-</div>
 
-<div class="demo-frame">
-<div class="headertitle expander" id="expander5"><a href="#" style="text-decoration:none">Shitbostro Songroh Andolon</a></div>
+</div></div><div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander5" class="headertitle expander">Shitbostro Songroh Andolon</div></a>
 
 <div class="content">
+
 <div class="infoclass">It is a volunteering organization of NSTU. It is established on the motoes of voluntarism, patriotism and humanism. Volunteering is a young phenomenon. Our young volunteers spread the hand of mankind. They are always ready to jumpwith their helping hand in any crisis of our country. The cheerful heroes of the group holds a cordial heart for the winter striken people of Bangladesh. Every winter it collects warm clothes from local areas and bitoron kore among the warm striken poor people. In 2012-13, It has collected a some of three hundred and fifty bosta of warm clothes from Choumuhoni, Maijdee, Begumganj, Sonapur and bitoron it at Nolerchar, Nolangirchar, Janatabajar in Hatia and Noakhali. It also works for the floating childrens of the locality. You are most welcome to the volunteering platform of NSTU.</div>
 
 <div class="infoclass"><strong>Our facebook page:</strong> <a href="http://www.facebook.com/profile.php?id=295258287337794">www.facebook.com/profile.php?id=295258287337794</a><br />
 <strong>Our facebook group:</strong> <a href="http://www.facebook.com/groups/502483806526277">www.facebook.com/groups/502483806526277</a></div>
 
 <div class="infoclass">Contact Person: <strong>Anik Das</strong>, <a class="telephone" href="tel:01729443322">01729443322</a></div>
-</div>
-</div>
 
+</div></div>
 <div class="demo-frame">
-<div class="headertitle expander" id="expander6"><a href="#" style="text-decoration:none">STOBOK</a></div>
+<a style="text-decoration:none" href="#"><div id="expander6" class="headertitle expander">STOBOK</div></a>
 
 <div class="content">an weekly &lsquo;Adda&rsquo; and they discuss about the literature, culture, music and the society. They believe that literature can make a cultural revolution in the mindset of the generation. It had brought out a fine Wall Paper, &lsquo;Kothonika&rsquo; with fresh literary outputs of university students.<br />
 <br />
 <strong>Activities:</strong><br />
 1. Publishing: Little Magazine, Wallpaper, Bulletin.<br />
 2. Organizing Cultural Programs: Memories the famous literary person, Sahitta Asor.<br />
-3. Spreading: Beliefs of Independence War, Beliefs of Humanity.<br />
-<br />
-<strong>Our Facebook Page:</strong> <a href="http://www.facebook.com/stobok">www.facebook.com/stobok</a><br />
-<br />
+3. Spreading: Beliefs of Independence War, Beliefs of Humanity.
+<br/><br/>
+<strong>Our Facebook Page:</strong> <a href="http://www.facebook.com/stobok">www.facebook.com/stobok</a><br /><br/>
 <strong>Contact Person:</strong> Iru Khairul Karim, <a class="telephone" href="tel:01684980185">01684980185</a></div>
+</div>
 </div>
 
 <div class="demo-frame">
-<div class="headertitle expander" id="expander7"><a href="#" style="text-decoration:none">Pharma Mirror</a></div>
+<a style="text-decoration:none" href="#"><div id="expander7" class="headertitle expander">Pharma Mirror</div></a>
 
 <div class="content">
+
 <div class="infoclass">Pharma Mirror &ndash; First online free access professional pharmaceutical magazine of its kind in the world. Pharma Mirror has an International Standard Serial Number ISSN 2219-763X of its own and it has been assigned by ISSN Center, Paris.<br />
 <br />
 Pharma Mirror is founded by Fahad Hussain, a student of pharmacy department of this university with his team comprised of other few students of the same department. He is also acting as the Editor of this magazine. This is a great achievement of the students of the Pharmacy Department of Noakahali science and Technology University.<br />
@@ -188,25 +184,23 @@ Pharma Mirror believes in cutting-edge peer reviewed contents over the pharma ar
 <div class="infoclass"><strong>Website</strong>: <a href="http://www.PharmaMirror.com">www.PharmaMirror.com</a></div>
 
 <div class="infoclass"><strong>Facebook Page</strong>: <a href="http://www.facebook.com/pharmamirror">www.facebook.com/pharmamirror</a></div>
-</div>
-</div>
 
-<div class="demo-frame">
-<div class="headertitle expander" id="expander8"><a href="#" style="text-decoration:none">Biggan Bangla</a></div>
+</div></div><div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander8" class="headertitle expander">Biggan Bangla</div></a>
 
 <div class="content">
+
 <div class="infoclass">Biggan Bangla is a science website where they share knowledge all about science. This website is leading by the CSTE 4th Batch. They also publish Galactica Magazine periodically.</div>
 
 <div class="infoclass"><strong>Website:</strong> <a href="http://www.bigganbangla.com">www.bigganbangla.com</a></div>
 
 <div class="infoclass"><strong>Facebook Page:</strong> <a href="http://www.facebook.com/mgalactica">www.facebook.com/mgalactica</a></div>
-</div>
-</div>
 
-<div class="demo-frame">
-<div class="headertitle expander" id="expander9"><a href="#" style="text-decoration:none">TechnologyBasic</a></div>
+</div></div><div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander9" class="headertitle expander">TechnologyBasic</div></a>
 
 <div class="content">
+
 <div class="infoclass">All Basic Concepts Of Technology In bangla like as wikipedia style ! you can say it a technology dictionary.&nbsp;It&#39;s very helpful site for IT department. This website is leading by CSTE5th Batch.</div>
 
 <div class="infoclass"><strong>Website:</strong> <a href="http://www.TechnologyBasic.com">www.TechnologyBasic.com</a></div>
@@ -214,23 +208,21 @@ Pharma Mirror believes in cutting-edge peer reviewed contents over the pharma ar
 <div class="infoclass"><strong>Desktop software:</strong>&nbsp; <a href="http://url.mashpy.me/310">http://url.mashpy.me/310</a></div>
 
 <div class="infoclass"><strong>Facebook Page:</strong> <a href="http://www.facebook.com/technologybasic">www.facebook.com/technologybasic</a></div>
-</div>
-</div>
 
-<div class="demo-frame">
-<div class="headertitle expander" id="expander10"><a href="#" style="text-decoration:none">Coding(Magazine)</a></div>
+</div></div><div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander10" class="headertitle expander">Coding(Magazine)</div></a>
 
 <div class="content">
+
 <div class="infoclass">&quot;Coding&quot; Magazine is published by CSTE7th batch. Here they included technical article, story, science fiction and etc.</div>
 
 <div class="infoclass"><strong>Download:</strong> <a href="https://www.facebook.com/download/778571238821219/mymagazine.pdf">download magazine</a></div>
-</div>
-</div>
 
-<div class="demo-frame">
-<div class="headertitle expander" id="expander11"><a href="#" style="text-decoration:none">Economicsbd Magazine</a></div>
+</div></div><div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander11" class="headertitle expander">Economicsbd Magazine</div></a>
 
 <div class="content">
+
 <div class="infoclass">It&#39;s rudimentary educative magazine, in Bangladesh launched by Md. Mahmudul Islam Khan a student associated with Economics and poverty studies department of the University with his team consists of additional couple of university&rsquo;s students from the very same department.<br />
 <br />
 The very proposition of instituting the magazine is to provide miscellaneous info including economical articles, economics events listing, current economical job circulars of Bangladesh, featured of Bank, NGOs profile, economical news and innovation.</div>
@@ -238,13 +230,12 @@ The very proposition of instituting the magazine is to provide miscellaneous inf
 <div class="infoclass"><strong>Website:</strong> <a href="http://www.economicsbd.com">www.economicsbd.com</a></div>
 
 <div class="infoclass"><strong>Facebook Page:</strong> <a href="http://www.facebook.com/economicsbdmagazine">Economicsbdmagazine</a></div>
-</div>
-</div>
 
-<div class="demo-frame">
-<div class="headertitle expander" id="expander12"><a href="#" style="text-decoration:none">Coastal Environment Network(CEN)</a></div>
+</div></div><div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander12" class="headertitle expander">Coastal Environment Network(CEN)</div></a>
 
 <div class="content">
+
 <div class="infoclass">&quot;Coastal Environment Network(CEN)&quot; is from Department of Environmental Science and Hazard studies of Noakhali Science and technology University.<br />
 <br />
 It was established with immense hope for maintaining a peaceful, warm, pollution free Environment and to develop mechanisms to protect our sacred sites, land, water, air, natural resources, health of both our people and all living things, and to build economically sustainable communities.<br />
@@ -254,13 +245,12 @@ The Coastal Environment Network (CEN) facilitates networking among environmental
 <div class="infoclass"><strong>Facebook group:</strong> <a href="http://goo.gl/ud8q7v">http://goo.gl/ud8q7v</a></div>
 
 <div class="infoclass"><strong>Dept. group:</strong> <a href="http://goo.gl/s8HXEt">http://goo.gl/s8HXEt</a></div>
-</div>
-</div>
 
-<div class="demo-frame">
-<div class="headertitle expander" id="expander13"><a href="#" style="text-decoration:none">DreamBazz Filmz</a></div>
+</div></div><div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander13" class="headertitle expander">DreamBazz Filmz</div></a>
 
 <div class="content">
+
 <div class="infoclass">Films tell the story of life. Film is a combination of happiness , sadness, pain, hatred, anger, music,dance, architecture, sculpture. For the centuries, films have been playing a pivotal role in changing the society. Therefore, we organize a film society named &quot; DreamBazz Filmz &quot; at NSTU in order to change the society through our films.We,some youngsters of NSTU dream to bring the story of life on big screen.We, belive that film is a journey of life.You can also be a proud passanger of this amazing journey.<br />
 <br />
 <strong>Works:</strong><br />
@@ -274,13 +264,12 @@ The Coastal Environment Network (CEN) facilitates networking among environmental
 ILLUSION-A short film.</div>
 
 <div class="infoclass"><strong>Facebook page: </strong><a href="http://facebook.com/profile.php?id=669912476438923">DreamBazz Filmz</a></div>
-</div>
-</div>
 
-<div class="demo-frame">
-<div class="headertitle expander" id="expander14"><a href="#" style="text-decoration:none">Journalist of Our University</a></div>
+</div></div><div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander14" class="headertitle expander">Journalist of NSTU</div></a>
 
 <div class="content">
+
 <div class="infoclass"><strong>Rezaul Karim Bhuiyan Sohag</strong><br />
 Applied Math, 6th Batch<br />
 Noakhalir Kotha<br />
@@ -300,6 +289,4 @@ English, 6th Batch<br />
 Banglanews24<br />
 <a href="http://www.banglanews24.com">www.banglanews24.com</a><br />
 Phone: <a class="telephone" href="tel:01829704731">01829704731</a><br />
-Email: <a class="email" href="mailto:hafizullashamim@gmail.com">hafizullashamim@gmail.com</a></div>
-</div>
-</div>
+Email: <a class="email" href="mailto:shamim.nstu92@gmail.com">shamim.nstu92@gmail.com</a></div>
