--- a/assets/ignoreit/Academic_officiary.html
+++ b/assets/ignoreit/Academic_officiary.html
@@ -3,8 +3,22 @@
 box-shadow:         inset 0px 0px 2px 0px rgba(49, 50, 50, 0.67);}
 body{background-color:#f5f5f5; font-family:serif; line-height:1.3em; border:3px solid #29b6f6; 	border-radius: 6px; padding:3px; padding-top:8px }
 p{font-size:15px}
-.headertitle{width:100%; font-size: 17px; background:#29b6f6; color:#FFFFFF; border-radius: 3px; text-align: center}
-.maintitle{font-weight:bold;width:100%; font-size: 16px; background:#039be5; color:#FFFFFF; border-radius: 15px;padding-top:10px; padding-bottom:10px; text-align: center; margin-bottom:10px}
+.headertitle{ padding-top: 5px; padding-bottom: 5px; margin-bottom:2px;
+  background: #039be5;
+  background-image: -webkit-linear-gradient(top, #03a9f4, #039be5);
+  background-image: -moz-linear-gradient(top, #03a9f4, #039be5);
+  background-image: -ms-linear-gradient(top, #03a9f4, #039be5);
+  background-image: -o-linear-gradient(top, #03a9f4, #039be5);
+  background-image: linear-gradient(to bottom, #03a9f4, #039be5);
+  border-radius: 3px;
+  color: #ffffff;
+  font-size: 16px;
+  padding: 9px 10px 9px 10px;
+  text-decoration: none;
+  text-align: center;
+}
+
+.maintitle{font-weight:bold;width:100%; font-size: 17px; background:#039be5; color:#FFFFFF; border-radius: 10px;padding-top:10px; padding-bottom:10px; text-align: center; margin-bottom:3px}
 .telephone {
     background-image: url("http://i61.tinypic.com/n6xtmw.png");
     background-position: 0 0px;
@@ -29,11 +43,38 @@ p{font-size:15px}
     text-decoration: none;
 }
 .Email:hover{color:#29b6f6}
+.content {display:none;}
+.toggle.expander.expanded {
+padding-left: 27px;
+background-position: 13px;
+background-repeat: no-repeat;
+background-image: url(https://raw.githubusercontent.com/sylvain-hamel/simple-expand/master/demo/expanded.gif);
+}
+.toggle.expander.collapsed {
+padding-left: 27px;
+background-position: 13px;
+background-repeat: no-repeat;
+background-image: url(https://raw.githubusercontent.com/sylvain-hamel/simple-expand/master/demo/collapsed.gif);
+}
+#demo-nesting-sub1 {
+margin-left: 20px;
+}
+#demo-nesting-sub2 {
+margin-left: 40px;
+}
 </style>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/sylvain-hamel/simple-expand/master/src/simple-expand.min.js"></script>
+<script type="text/javascript">
+$(function () {
+$('.expander').simpleexpand();
+});
+</script>
 <div class="maintitle">Academic Officiary</div>
 
-<div class="headertitle">Computer Science and Telecommunication Engineering (CSTE)</div>
-
+</div></div><div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">Computer Science and Telecommunication Engineering (CSTE 01)</div>
+</a><div class="content">
 <div class="infoclass"><strong>Sazib Bhowmik</strong><br />
 Lab Instructor<br />
 Phone : <a class="telephone" href="tel:01715-573929">01715-573929</a><br />
@@ -55,8 +96,9 @@ Phone : <a class="telephone" href="tel:01740994148">01740-994148</a></div>
 MLSS<br />
 Phone : <a class="telephone" href="tel:01815325162">01815325162</a></div>
 
-<div class="headertitle">Fisheries &amp; Marine Science</div>
-
+</div></div><div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">Fisheries &amp; Marine Science(FIMS 02)</div>
+</a><div class="content">
 <div class="infoclass"><strong>Shafiqul Kabir Khan</strong><br />
 Senior Assistant<br />
 Phone : <a class="telephone" href="tel:+8801727266389">+880-1727266389</a><br />
@@ -92,8 +134,9 @@ Master Roll Employee<br />
 Phone : <a class="telephone" href="tel:+8801919845356">+880-1919845356</a><br />
 E-mail : <a class="email" href="mailto:mai-nstu@gmail.com">mai-nstu@gmail.com</a></div>
 
-<div class="headertitle">&nbsp;Pharmacy</div>
-
+</div></div><div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">&nbsp;Pharmacy (03)</div>
+</a><div class="content">
 <div class="infoclass"><strong>Mohammad Shahab Uddin</strong><br />
 Section officer<br />
 Phone : <a class="telephone" href="tel:01919900955">01919-900955</a><br />
@@ -129,8 +172,9 @@ MLSS<br />
 Phone : <a class="telephone" href="tel:01925092623">01925-092623</a><br />
 E-mail : <a class="email" href="mailto:mdyusufnstu@gmail.com">mdyusufnstu@gmail.com</a></div>
 
-<div class="headertitle">ACCE</div>
-
+</div></div><div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">Applied Chemistry & Chemical Engineering(ACCE 04)</div>
+</a><div class="content">
 <div class="infoclass"><strong>Md. Ismail Hossain</strong><br />
 Section officer<br />
 Mobile : <a class="telephone" href="tel:01728150181">01728-150181</a> , <a class="telephone" href="tel:01819985436">01819-985436</a><br />
@@ -161,8 +205,9 @@ Phone : <a class="telephone" href="tel:01726854487">01726854487</a></div>
 Proctor office<br />
 Phone : <a class="telephone" href="tel:01812669662">01812669662</a></div>
 
-<div class="headertitle">Microbiology</div>
-
+</div></div><div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">Microbiology(MBG 05)</div>
+</a><div class="content">
 <div class="infoclass"><strong>Md. Yasin</strong><br />
 L.D<br />
 Mobile : <a class="telephone" href="tel:01845551985">01845551985</a></div>
@@ -179,8 +224,9 @@ Mobile : <a class="telephone" href="tel:01740850421">01740850421</a></div>
 Master roll<br />
 Mobile : <a class="telephone" href="tel:01724347144">01724347144</a></div>
 
-<div class="headertitle">Applied Math</div>
-
+</div></div><div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">Applied Math(A. MTH 06)</div>
+</a><div class="content">
 <div class="infoclass"><strong>Mohammad Toyaha</strong><br />
 Section officer<br />
 Phone : <a class="telephone" href="tel:+88032163298">+88032163298</a><br />
@@ -190,8 +236,9 @@ E-mail : <a class="email" href="mailto:toyaha.nstu@gmail.com">toyaha.nstu@gmail.
 M.L.M.S<br />
 Phone : <a class="telephone" href="tel:01725369490">01725369490</a></div>
 
-<div class="headertitle">English</div>
-
+</div></div><div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">English(07)</div>
+</a><div class="content">
 <div class="infoclass"><strong>A S M Sayem</strong><br />
 Section officer<br />
 Phone: <a class="telephone" href="tel:01716178646">01716178646</a><br />
@@ -205,8 +252,9 @@ Phone: <a class="telephone" href="tel:01814773533">01814773533</a></div>
 MLSS<br />
 Phone: <a class="telephone" href="tel:01735003678">01735003678</a></div>
 
-<div class="headertitle">Dept of BBA +Food + Environment</div>
-
+</div></div><div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">FTNS(08)+ ESHS(09)+ BBA(10)</div>
+</a><div class="content">
 <div class="infoclass"><strong>Kamrunnahar</strong><br />
 Senior Assistant<br />
 Phone : <a class="telephone" href="tel:01863015364">01863015364</a></div>
@@ -219,8 +267,9 @@ Phone : <a class="telephone" href="tel:01811285763">01811285763</a></div>
 M.L.S.S<br />
 Phone : <a class="telephone" href="tel:01861123835">01861123835</a></div>
 
-<div class="headertitle">Dept of EPS + CA + ICT + BGE</div>
-
+</div></div><div class="demo-frame">
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">ICT(11)+ BGE(12)+ EPS(13)+ CA(14)</div>
+</a><div class="content">
 <div class="infoclass"><strong>Kohinur Begum</strong><br />
 Senior Assistant<br />
 Phone : <a class="telephone" href="tel:01938436570">01938436570</a></div>
@@ -236,3 +285,4 @@ Phone : <a class="telephone" href="tel:01814430366">01814430366</a></div>
 <div class="infoclass"><strong>Akram Hossain</strong><br />
 M.L.S.S<br />
 Phone : <a class="telephone" href="tel:01818517303">01818517303</a></div>
+</div></div>
