--- a/assets/ignoreit/academic_council.html
+++ b/assets/ignoreit/academic_council.html
@@ -4,7 +4,7 @@ box-shadow:         inset 0px 0px 2px 0px rgba(49, 50, 50, 0.67);}
 body{background-color:#f5f5f5; font-family:serif; line-height:1.3em; border:3px solid #29b6f6; 	border-radius: 6px; padding:3px; padding-top:8px }
 p{font-size:15px}
 .headertitle{width:100%; font-size: 17px; background:#29b6f6; color:#FFFFFF; border-radius: 3px; text-align: center}
-.maintitle{font-weight:bold;width:100%; font-size: 16px; background:#039be5; color:#FFFFFF; border-radius: 15px;padding-top:10px; padding-bottom:10px; text-align: center; margin-bottom:10px}
+.maintitle{font-weight:bold;width:100%; font-size: 17px; background:#039be5; color:#FFFFFF; border-radius: 15px;padding-top:10px; padding-bottom:10px; text-align: center; margin-bottom:10px}
 .telephone {
     background-image: url("http://i61.tinypic.com/n6xtmw.png");
     background-position: 0 0px;
@@ -39,9 +39,7 @@ p{font-size:15px}
 
 <div>
 <div class="infoclass">
-<div><strong>A. K. M. Sayedul Haque Chowdhury</strong></div>
-
-<div>Vice Chancellor (27th Sept 2010-26th Sept 2014)</div>
+<div>Vice Chancellor</div>
 
 <div>phone: <a class="telephone" href="tel:62833">62833</a> , <a class="telephone" href="tel:62655">62655</a>, <a class="telephone" href="tel:62655">62733</a></div>
 
@@ -207,10 +205,8 @@ Phone: <a class="telephone" href="tel:01711198295">01711198295</a></div>
 <div class="infoclass">
 <div>Controller of Examinations(Addtional)</div>
 
-<div><strong>A. K. M. Sayedul Haque Chowdhury</strong></div>
-
 <div>
-<div>Vice Chancellors</div>
+<div><strong>Vice Chancellors</strong></div>
 </div>
 </div>
 
