--- a/assets/ignoreit/introduction.html
+++ b/assets/ignoreit/introduction.html
@@ -4,7 +4,7 @@ box-shadow:         inset 0px 0px 2px 0px rgba(49, 50, 50, 0.67);}
 body{background-color:#f5f5f5; font-family:serif; line-height:1.3em; border:3px solid #29b6f6; 	border-radius: 6px; padding:3px; padding-top:8px }
 p{font-size:15px}
 .headertitle{width:100%; font-size: 17px; background:#29b6f6; color:#FFFFFF; border-radius: 3px; text-align: center}
-.maintitle{font-weight:bold;width:100%; font-size: 16px; background:#039be5; color:#FFFFFF; border-radius: 15px;padding-top:10px; padding-bottom:10px; text-align: center; margin-bottom:10px}
+.maintitle{font-weight:bold;width:100%; font-size: 17px; background:#039be5; color:#FFFFFF; border-radius: 15px;padding-top:10px; padding-bottom:10px; text-align: center; margin-bottom:10px}
 .telephone {
     background-image: url("http://i61.tinypic.com/n6xtmw.png");
     background-position: 0 0px;
@@ -57,7 +57,7 @@ p{font-size:15px}
 03. Pharmacy (<a href="http://www.nstupharma.org">www.nstupharma.org</a>)<br />
 04. Applied Chemistry &amp; Chemical Engineering (ACCE)<br />
 05. Microbiology<br />
-06. Applied Mathematics<br />
+06. Applied Mathematics(A. MTH)<br />
 07. English<br />
 08. Food Technology and Nutrition Science(FTNS)<br />
 09. Environmental Science and Hazard Studies(ESHS)<br />
