fixed th the name problem

--- a/assets/ignoreit/Central_library.html
+++ b/assets/ignoreit/Central_library.html
@@ -37,7 +37,7 @@ p{font-size:15px}
 
 <p>You can download the Academic booklist in PDF format.</p>
 
-<p><a href="http://url.mashpy.me/312">Download from here</a></p>
+<p><a href="http://goo.gl/MMhnyU">Download from here</a></p>
 
 <p>For any information You can contact with them:</p>
 
