--- a/assets/ignoreit/committes.html
+++ b/assets/ignoreit/committes.html
@@ -79,7 +79,7 @@ Mobile: <a class="telephone" href="tel:01720197823">01720197823</a></div>
 <div style="text-align: center;"><u><strong><span style="font-size:16px;">Members</span></strong></u></div>
 
 <div class="infoclass">Dean of the Faculty<br />
-<strong>Professor Dr. Md Abul Hossen</strong></div>
+<strong>Professor Dr. Md Abul Hossain</strong></div>
 
 <div class="infoclass">Dean, Science Faculty<br />
 Phone: <a class="telephone" href="tel:62823">62823</a><br />
@@ -131,7 +131,7 @@ Mobile: <a class="telephone" href="tel:01720197825">01720197825</a></div>
 <div style="text-align: center;"><span style="font-size:16px;"><u><strong>Members</strong></u></span></div>
 
 <div class="infoclass">Dean of the Faculty<br />
-<strong>Professor Dr. Md Abul Hossen</strong><br />
+<strong>Professor Dr. Md Abul Hossain</strong><br />
 Dean, Science Faculty.<br />
 Phone: <a class="telephone" href="tel:62823">62823</a><br />
 Mobile: <a class="telephone" href="tel:0173012916">0173012916</a></div>
