--- a/assets/ignoreit/emergency.html
+++ b/assets/ignoreit/emergency.html
@@ -112,7 +112,7 @@ Fax: <a class="telephone" href="tel:61123">61123</a></div>
 
 <div class="infoclass"><strong>Assistant Director:</strong> <a class="telephone" href="tel:61258">61258</a></div>
 
-<div class="infoclass"><strong>Maijdi Fair Station: </strong><a class="telephone" href="tel:62031">62031</a></div>
+<div class="infoclass"><strong>Maijdi Fire Station: </strong><a class="telephone" href="tel:62031">62031</a></div>
 
 </div></div><div class="demo-frame">
 <a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">Kuriar Service</div></a>
