--- a/assets/ignoreit/student_activities.html
+++ b/assets/ignoreit/student_activities.html
@@ -205,7 +205,7 @@ Pharma Mirror believes in cutting-edge peer reviewed contents over the pharma ar
 
 <div class="infoclass"><strong>Website:</strong> <a href="http://www.TechnologyBasic.com">www.TechnologyBasic.com</a></div>
 
-<div class="infoclass"><strong>Desktop software:</strong>&nbsp; <a href="http://url.mashpy.me/310">http://url.mashpy.me/310</a></div>
+<div class="infoclass"><strong>Desktop software:</strong>&nbsp; <a href="http://goo.gl/DMXJ8k">http://goo.gl/DMXJ8k</a></div>
 
 <div class="infoclass"><strong>Facebook Page:</strong> <a href="http://www.facebook.com/technologybasic">www.facebook.com/technologybasic</a></div>
 
