i have released the nstuinfo v1.0

--- a/assets/ignoreit/committes.html
+++ b/assets/ignoreit/committes.html
@@ -30,7 +30,7 @@ p{font-size:15px}
 }
 .email:hover{color:#29b6f6}
 </style>
-<div class="maintitle">Committee</div>
+<div class="maintitle">Committees</div>
 
 <div class="headertitle">Finance&nbsp; Committee</div>
 
