--- a/assets/ignoreit/registeroffice.html
+++ b/assets/ignoreit/registeroffice.html
@@ -72,7 +72,7 @@ $('.expander').simpleexpand();
 </script>
 
 
-<div class="maintitle">Register Offices</div>
+<div class="maintitle">Offices</div>
 
 <div class="demo-frame">
 <a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">Vice Chancellor Office</div></a>
