fixed the numbers of CR and some linking

--- a/assets/ignoreit/CR.html
+++ b/assets/ignoreit/CR.html
@@ -88,7 +88,7 @@ Phone: <a class="telephone" href="tel:01823024498">01823024498</a></div>
 <p style="text-align: center;"><u><strong>6th Batch</strong></u></p>
 
 <div class="infoclass"><strong>Azizul Hakim Suzan</strong><br />
-Phone: <a class="telephone" href="tel:01682865296">01682865296</a>, <a class="telephone" href="tel:01912675208">01912675208</a></div>
+Phone: <a class="telephone" href="tel:01912675208">01912675208</a></div>
 
 <p style="text-align: center;"><u><strong>7th Batch</strong></u></p>
 
@@ -242,7 +242,7 @@ Phone: <a class="telephone" href="tel:01814743728">01814743728</a></div>
 Phone: <a class="telephone" href="tel:01726117509">01726117509</a></div>
 
 <div class="infoclass">CR(Female)<br />
-<strong>Chumki</strong></div>
+<strong>Razia Sultana</strong></div>
 
 <p style="text-align: center;"><strong><u>9th batch</u></strong></p>
 
