changed the version

--- a/assets/ignoreit/CR.html
+++ b/assets/ignoreit/CR.html
@@ -222,8 +222,8 @@ Phone: <a class="telephone" href="tel:01758863333">01758863333</a></div>
 
 <p style="text-align: center;"><u><strong>6th Batch</strong></u></p>
 
-<div class="infoclass"><strong>Sajib</strong><br />
-Phone: <a class="telephone" href="tel:01620601727">01620601727</a></div>
+<div class="infoclass"><strong>Prince</strong><br />
+Phone: <a class="telephone" href="tel:01735698084">01735698084</a></div>
 
 <div class="infoclass">CR(Female)<br />
 <strong>Sumita</strong></div>
@@ -236,7 +236,7 @@ Phone: <a class="telephone" href="tel:01814743728">01814743728</a></div>
 <div class="infoclass">CR(Female)<br />
 <strong>Chaity</strong></div>
 
-<p style="text-align: center;"><strong>8th Batch</strong></p>
+<p style="text-align: center;"><u><strong>8th Batch</strong></u></p>
 
 <div class="infoclass"><strong>Pial</strong><br />
 Phone: <a class="telephone" href="tel:01726117509">01726117509</a></div>
