--- a/assets/ignoreit/registraroffice.html
+++ b/assets/ignoreit/registraroffice.html
@@ -107,20 +107,20 @@ E-mail:<a class="email" href="mailto:meru.nstu@yahoo.com">meru.nstu@yahoo.com&nb
 </div>
 
 <div class="demo-frame">
-<a style="text-decoration:none" href="#"><div id="expander3" class="headertitle expander">Register office</div></a>
+<a style="text-decoration:none" href="#"><div id="expander3" class="headertitle expander">Registrar office</div></a>
 <div class="content">
-<div class="infoclass">Register:<br />
+<div class="infoclass">Registrar:<br />
 <strong>Professor Md. Mominul Haque</strong><br />
 phone:<a class="telephone" href="tel:+88032162812">+880-321-62812</a>; <a class="telephone" href="tel:+88032171314">+880-321-71314</a>;<br />
 Mobile:<a class="telephone" href="tel:01720197824">01720197824</a>; <a class="telephone" href="tel:01712072936">01712072936</a>;<br />
 E-mail:<a class="email" href="mailto:infonstu@yahoo.com">infonstu@yahoo.com</a></div>
 
-<div class="infoclass">Sub-Register:<br />
+<div class="infoclass">Sub-Registrar:<br />
 <strong>Mr. Md.Jashim Uddin</strong><br />
 Mobile:<a class="telephone" href="tel:01819834393">01819834393</a><br />
 E-mail:<a class="email" href="mailto:jashim_uu@yahoo.com">jashim_uu@yahoo.com</a></div>
 
-<div class="infoclass">Assistant Register:<br />
+<div class="infoclass">Assistant Registrar:<br />
 <strong>Mr. Md.Golap Hossain</strong><br />
 Mobile:<a class="telephone" href="tel:01827522677">01827522677</a><br />
 E-mail:<a class="email" href="mailto:golapshah77@yahoo.com">golapshah77@yahoo.com</a></div>
@@ -155,7 +155,7 @@ E-mail:<a class="email" href="mailto:ars_nstu@yahoo.com">ars_nstu@yahoo.com</a><
 <div class="demo-frame">
 <a style="text-decoration:none" href="#"><div id="expander5" class="headertitle expander">Administration Branch</div></a>
 <div class="content">
-<div class="infoclass">Sub-Register<br />
+<div class="infoclass">Sub-Registrar<br />
 <strong>Dr. Mohammad Alamgir Sarkar</strong><br />
 Mobile:<a class="telephone" href="tel:01849120444">01849120444</a><br />
 E-mail: <a class="email" href="mailto:sarker_2003@yahoo.com">sarker_2003@yahoo.com</a></div>
@@ -180,7 +180,7 @@ E-mail:<a class="email" href="mailto:rousseau777@yahoo.com">rousseau777@yahoo.co
 <div class="demo-frame">
 <a style="text-decoration:none" href="#"><div id="expander7" class="headertitle expander">Public Relation Branch And Guest house on Dhaka</div></a>
 <div class="content">
-<div class="infoclass">Assistant Register:<br />
+<div class="infoclass">Assistant Registrar:<br />
 <strong>Mr. mohammad Tamzid Hossain Chowdhury</strong><br />
 Mobile:<a class="telephone" href="tel:01733998894">01733998894</a><br />
 E-mail:<a class="email" href="mailto:tamzidnstu@gmail.com">tamzidnstu@gmail.com</a></div>
@@ -193,7 +193,7 @@ Mobile:<a class="telephone" href="tel:01934384890">01934384890</a></div>
 <div class="demo-frame">
 <a style="text-decoration:none" href="#"><div id="expander8" class="headertitle expander">Estate and Housing Branch:</div></a>
 <div class="content">
-<div class="infoclass">Assistant Register:<br />
+<div class="infoclass">Assistant Registrar:<br />
 <strong>Mr. Mohammad saifuddin</strong><br />
 Mobile:<a class="telephone" href="tel:01817584882">01817584882</a><br />
 E-mail:<a class="email" href="mailto:saif_nstu2013@yahoo.com">saif_nstu2013@yahoo.com</a></div>
