--- a/assets/ignoreit/emergency.html
+++ b/assets/ignoreit/emergency.html
@@ -115,7 +115,7 @@ Fax: <a class="telephone" href="tel:61123">61123</a></div>
 <div class="infoclass"><strong>Maijdi Fire Station: </strong><a class="telephone" href="tel:62031">62031</a></div>
 
 </div></div><div class="demo-frame">
-<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">Kuriar Service</div></a>
+<a style="text-decoration:none" href="#"><div id="expander1" class="headertitle expander">Courier Service</div></a>
 <div class="content">
 
 <div class="infoclass"><strong>SA Poribohon</strong>, Maijdi: <a class="telephone" href="tel:71006">71006</a></div>
